--- a/login.html
+++ b/login.html
@@ -1,37 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retriever Study - Login</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <div class="logo">
-            <img src="retriever-logo.png" alt="Retriever Logo">
-            <h1>RETRIEVER STUDY</h1>
-        </div>
-        <div class="header-links">
-            <a href="#">Home</a>
-            <a href="#">Login</a>
-        </div>
-    </header>
+{% extends "base.html" %}
 
-    <section class="login-section">
-        <div class="login-container">
-            <h2>Login to Your Account</h2>
-            <form action="#" method="post">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-                
-                <button type="submit">Login</button>
+{% block title %}Login - Retriever Study{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <h2 class="text-center mb-4">Login</h2>
+            <form action="{{ url_for('auth.login') }}" method="POST">
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100" style="background-color: var(--accent-color); border: none;">Login</button>
             </form>
-            <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
+            <div class="text-center mt-3">
+                <p>Don't have an account? <a href="{{ url_for('auth.sign_up') }}" style="color: var(--accent-color);">Sign Up</a></p>
+            </div>
         </div>
-    </section>
-</body>
-</html>
+    </div>
+</div>
+{% endblock %}
