--- a/profile.html
+++ b/profile.html
@@ -3,47 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retriever Study - Edit Profile</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>User Profile</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="retriever-logo.png" alt="Retriever Logo">
+            <img src="{{ url_for('static', filename='retriever-logo.png') }}" alt="Retriever Logo">
             <h1>RETRIEVER STUDY</h1>
         </div>
         <div class="header-links">
-            <a href="#">Home</a>
-            <a href="login.html">Login</a>
-            <a href="signup.html">Sign Up</a>
+            <a href="{{ url_for('views.home') }}">Home</a>
+            <a href="{{ url_for('views.study') }}">Study Groups</a>
         </div>
     </header>
 
     <section class="profile-section">
-        <div class="profile-container">
-            <h2>Edit Profile</h2>
-            <form id="profile-form" action="/api/update-profile" method="post">
-                <label for="first-name">First Name:</label>
-                <input type="text" id="first-name" name="first_name" required>
-
-                <label for="last-name">Last Name:</label>
-                <input type="text" id="last-name" name="last_name" required>
-
-                <label for="email">UMBC Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="phone">Phone Number:</label>
-                <input type="tel" id="phone" name="phone" required>
-
-                <label for="password">New Password:</label>
-                <input type="password" id="password" name="password" required>
-
-                <label for="confirm-password">Confirm Password:</label>
-                <input type="password" id="confirm-password" name="confirm_password" required>
-
-                <button type="submit">Save Changes</button>
-            </form>
-        </div>
+        <h2>Welcome, {{ user.name }}</h2>
+        <p>Email: {{ user.email }}</p>
+        <p>Major: {{ user.major }}</p>
+        <p>Year: {{ user.year }}</p>
     </section>
+
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
